# noodly

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.agents/skills/testing/: SKILL.md
.agents/skills/testing-noodly/: SKILL.md
.agents/skills/testing-noodly-cli/: SKILL.md
.agents/skills/testing-noodly-pipeline/: SKILL.md
.github/workflows/: ci.yml
docs/research/: provenance-dedup-factcheck-conflicts.md
src/noodly/: __init__.py  cli.py  config.py  pipeline.py
src/noodly/agents/: __init__.py  base_agent.py  compact_serializer.py  context_scoper.py  graph_agent.py  model_router.py  qa_agent.py  toolkit.py
src/noodly/caching/: __init__.py  decision_cache.py  extraction_cache.py  manager.py  parse_cache.py
src/noodly/connectors/: __init__.py  base.py  local_fs.py
src/noodly/dispatch/: __init__.py  dispatcher.py  gitlab_handler.py  handlers.py
src/noodly/extraction/: __init__.py  dispatcher.py  extractor.py  orchestrator.py
src/noodly/graph/: __init__.py  brain.py
src/noodly/models/: __init__.py  artifacts.py  claims.py  edge_types.py
src/noodly/parsing/: __init__.py  boilerplate.py  chunker.py  parser.py
src/noodly/projection/: __init__.py  gitlab.py  markdown.py  planner.py
tests/: conftest.py  test_agents.py  test_authority.py  test_caching.py  test_connector.py  test_graphiti_backend.py  test_json_backend.py  test_ledger.py  test_models.py  test_parsing.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_phase8.py  test_pipeline.py  test_projector.py  test_tracking.py
(+22 files in other folders)
