[project]
name = "noodly"
version = "0.1.0"
description = "Open-source Company Brain — ingest knowledge, build a temporal context graph, expose truth to AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Aniruddha Adhikary", email = "aniruddha@adhikary.net"},
]
requires-python = ">=3.11"
dependencies = [
    "graphiti-core[falkordb]>=0.29.0",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "mcp[cli]>=1.0.0",
    "watchdog>=4.0.0",
    "markitdown>=0.1.0",
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
docling = [
    "docling>=2.0.0",
]
postgresql = [
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
]
dev = [
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "aioresponses>=0.7.6",
]

[project.scripts]
noodly = "noodly.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/noodly"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
